Closed
Bug 1281739
Opened 10 years ago
Closed 10 years ago
Match updated spec for `/\w/iu` and `/\W/iu`
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla50
| Tracking | Status | |
|---|---|---|
| firefox50 | --- | fixed |
People
(Reporter: mathias, Assigned: arai)
References
Details
(Keywords: dev-doc-complete)
Attachments
(1 file)
Now that https://github.com/tc39/ecma262/pull/525 has landed, `\u017F` (LATIN SMALL LETTER LONG S) and `\u212A` (KELVIN SIGN) are word characters for `/iu` patterns.
Expected behavior:
/\w/iu.test('\u017F') // true
/\w/iu.test('\u212A') // true
/\W/iu.test('\u017F') // false
/\W/iu.test('\u212A') // false
Actual behavior: currently, they all result in `true`.
| Reporter | ||
Updated•10 years ago
|
| Reporter | ||
Updated•10 years ago
|
See Also: → https://bugs.webkit.org/show_bug.cgi?id=159055
| Reporter | ||
Updated•10 years ago
|
| Reporter | ||
Updated•10 years ago
|
| Assignee | ||
Comment 1•10 years ago
|
||
Removed K, S, k, s, KELVIN SIGN, LATIN SMALL LETTER LONG S from kNegatedIgnoreCaseWordAndSurrogateRanges.
Assignee: nobody → arai.unmht
Attachment #8764761 -
Flags: review?(till)
Comment 2•10 years ago
|
||
Comment on attachment 8764761 [details] [diff] [review]
Do not match K, S, k, s, KELVIN SIGN, LATIN SMALL LETTER LONG S with \W in unicode RegExp.
Review of attachment 8764761 [details] [diff] [review]:
-----------------------------------------------------------------
Looks good, thank you.
Attachment #8764761 -
Flags: review?(till) → review+
| Assignee | ||
Comment 3•10 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/71d499e82b2cd5096b6f92f0c565cb6cfd5c6039
Bug 1281739 - Do not match K, S, k, s, KELVIN SIGN, LATIN SMALL LETTER LONG S with \W in unicode ignoreCase RegExp. r=till
| Assignee | ||
Comment 4•10 years ago
|
||
This is a breaking change.
will update documentation after merge.
Keywords: dev-doc-needed
Comment 5•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox50:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Comment 6•10 years ago
|
||
I'm not going to write a site compatibility doc for this because the u flag is still new and the change is minor.
| Assignee | ||
Comment 7•10 years ago
|
||
Keywords: dev-doc-needed → dev-doc-complete
You need to log in
before you can comment on or make changes to this bug.
Description
•